--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,4 +1,5 @@
 $primary-color: #ef5350;
+$secondary-color: #ddd;
 
 // Font Weights
 $light: 400;
@@ -10,6 +11,8 @@ $base-font-family: 'Montserrat';
 $base-font-weight: $regular;
 $base-font-size: 1em;
 $base-line-height: 1.4;
+
+$pagination-font-size: 2em;
 
 * {
     font-family: $base-font-family;
