--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,5 +1,7 @@
 $primary-color: #ef5350;
 $secondary-color: #ddd;
+$success-color: #4BB543;
+$danger-color: #bd3736;
 
 // Font Weights
 $light: 400;
@@ -18,8 +20,8 @@ $pagination-font-size: 2em;
     font-family: $base-font-family;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    margin: 0;
+h1, h2, h3, h4, h5, h6, p {
+    line-height: 0;
 }
 
 ul {
