--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -1,19 +1,28 @@
 .card {
   border: 1px solid #999;
   border-radius: 5px;
-  margin: 20px 0px;
+  margin: 10px 0px;
+  padding: 10px;
   -webkit-box-shadow: 0px 1px 5px 2px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 0px 1px 5px 2px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 1px 5px 2px rgba(0, 0, 0, 0.2);
 }
 
+.input {
+  border-radius: 5px;
+  border: 1px solid #999
+}
+
 .button {
   border-radius: 5px;
-  padding: 5px;
+  padding: 10px;
   border: 1px solid #ffa500;
   cursor: pointer;
   text-decoration: none;
   color: black;
+  -webkit-box-shadow: 0px 1px 5px 2px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 1px 5px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 5px 2px rgba(0, 0, 0, 0.2);
 }
 
 .button:hover {
@@ -21,10 +30,22 @@
   color: white;
 }
 
+.button_success {
+  border: 0;
+  background-color: $success-color;
+  color: white;
+}
+
+.button_success:hover {
+  background-color: rgba($success-color, 0.8);
+  transform: translateY(-1px);
+  transition: 0.1s
+}
 .pagination {
   display: flex;
   justify-content: space-around;
   font-size: $pagination-font-size;
+  margin: 15px 0;
 }
 
 .pagination--item {
@@ -37,8 +58,12 @@
   a {
     color: $primary-color;
     text-decoration: none;
-    text-align: center;
     border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
   }
 }
 
@@ -64,7 +89,7 @@
 }
 
 .pagination--item-arrow:hover {
-  background-color: #ddd;
+  background-color: #fff;
 
   a {
     color: $primary-color;
@@ -75,8 +100,21 @@
   font-weight: $bold;
 }
 
+.text__success {
+  color: $success-color;
+}
+
+.text__danger {
+  color: $danger-color;
+}
+
 @media (min-width: 480px) {
   .pagination--item {
     flex: 0 1 5%;
+  }
+
+  .button {
+    border-radius: 5px;
+    padding: 15px 25px;
   }
 }
