--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -99,9 +99,41 @@
 .card--pokemon-list {
   display: flex;
   justify-content: space-between;
-  padding: 0 10px;
   align-items: center;
   text-transform: capitalize;
+}
+
+.card--owned-pokemon {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  text-transform: capitalize;
+}
+
+.card--owned-pokemon-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-basis: 50px;
+  color: white;
+  background-color: $danger-color;
+  justify-self:flex-end;
+  cursor: pointer;
+}
+
+.card--owned-pokemon-button:hover {
+  background-color: rgba($danger-color, 0.8);
+}
+
+.card--owned-pokemon-text {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  :first-child {
+    font-size: 0.8em;
+  }
 }
 
 .card--general {
@@ -154,6 +186,10 @@
   > * {
     margin:0 10px;
   }
+}
+
+.page-info {
+  margin: 1rem 0;
 }
 
 @media (min-width:480px) {
