Change some units from px to em / rem Fix BEM notation writing style Clean up unusued CSS

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,12 +1,13 @@
 $primary-color: #ef5350;
-$secondary-color: #ddd;
+$secondary-color: #ffffff;
+$border-color: #999999;
 $success-color: #4BB543;
 $danger-color: #bd3736;
 
 // Font Weights
 $light: 400;
 $regular: 600;
-$bold: 600;
+$bold: 800;
 
 // Base Font
 $base-font-family: 'Montserrat';
