--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -20,6 +20,7 @@
 }
 
 .button {
+  display: inline-block;
   border-radius: 5px;
   padding: 0.5em 1.2em;
   line-height: 1.75;
@@ -32,13 +33,13 @@
     background: #ffa500;
     color: white;
   }
-  
-  @media (min-width:480px) {
+
+  @media (min-width: 480px) {
     padding: 0.8em 2em;
   }
 }
 
-.button__success {
+.button--success {
   border: 0;
   background-color: $success-color;
   color: white;
@@ -46,7 +47,19 @@
   &:hover {
     background-color: rgba($success-color, 0.8);
     transform: translateY(-1px);
-    transition: 0.1s
+    transition: 0.1s;
+  }
+}
+
+.button--danger {
+  border: 0;
+  background-color: $danger-color;
+  color: white;
+
+  &:hover {
+    background-color: rgba($danger-color, 0.8);
+    transform: translateY(-1px);
+    transition: 0.1s;
   }
 }
 
@@ -55,7 +68,7 @@
   justify-content: center;
   font-size: $pagination-font-size;
 
-  @media (min-width:480px) { 
+  @media (min-width: 480px) {
     margin: 1em 0;
   }
 }
@@ -66,7 +79,7 @@
   border-radius: 5px;
   align-items: center;
   width: 1.5em;
-  
+
   a {
     color: $primary-color;
     text-decoration: none;
@@ -77,17 +90,17 @@
     height: 100%;
     width: 100%;
   }
-  
-  @media (min-width:480px) {
+
+  @media (min-width: 480px) {
     flex: 0 1 5%;
   }
 }
 
 .pagination__page {
-  font-size: 0.6em;    
+  font-size: 0.6em;
   margin: 0 0.25em;
-  
-  @media (min-width:480px) { 
+
+  @media (min-width: 480px) {
     font-size: 1.2em;
     margin: 0rem 1.5rem;
   }
@@ -100,7 +113,6 @@
     color: white;
   }
 }
-
 
 .pagination__arrow {
   background-color: $primary-color;
@@ -121,10 +133,10 @@
 
 .pagination__arrow--disabled {
   background-color: #ccc;
-  
+
   &:hover {
     background-color: #ccc;
-    
+
     a {
       color: #fff;
     }
