--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -65,11 +65,14 @@
 
 .pagination {
   display: flex;
-  justify-content: center;
-  font-size: $pagination-font-size;
+  justify-content: space-between;
+  font-size: $large-font-size;
+  margin: 0.5em;
 
   @media (min-width: 480px) {
     margin: 1em 0;
+    font-size: $base-font-size;
+    justify-content: center;
   }
 }
 
@@ -78,7 +81,7 @@
   justify-content: center;
   border-radius: 5px;
   align-items: center;
-  width: 1.5em;
+  flex-basis: 5em;
 
   a {
     color: $primary-color;
@@ -87,33 +90,34 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100%;
     width: 100%;
+    padding: 0;
   }
 
   @media (min-width: 480px) {
     flex: 0 1 5%;
+
+    a {
+      padding: 0.5em 0;
+    }
   }
 }
 
 .pagination__page {
-  font-size: 0.6em;
-  margin: 0 0.25em;
+  margin: 0 0.2em;
 
   @media (min-width: 480px) {
-    font-size: 1.2em;
     margin: 0rem 1.5rem;
   }
-}
 
-.pagination__page:hover {
-  background-color: $primary-color;
+  &:hover {
+    background-color: $primary-color;
 
-  a {
-    color: white;
+    a {
+      color: white;
+    }
   }
 }
-
 .pagination__arrow {
   background-color: $primary-color;
   border-radius: 5px;
@@ -121,13 +125,13 @@
   a {
     color: white;
   }
-}
 
-.pagination__arrow:hover {
-  background-color: #fff;
+  &:hover {
+    background-color: #fff;
 
-  a {
-    color: $primary-color;
+    a {
+      color: $primary-color;
+    }
   }
 }
 
