--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,5 +1,9 @@
 .container {
-  margin: 1em;
+  margin: auto;
+
+  @media (min-width: 480px) {
+    width: 90%;
+  }
 }
 
 .header {
@@ -13,12 +17,9 @@
 .header__logo {
   display: flex;
   align-items: center;
-  flex: 3;
-
-  @media (min-width: 480px) {
-    flex: 4;
-    flex-basis: 50%;
-  }
+  text-decoration: none;
+  color: white;
+  font-size: 0.9em;
 }
 
 .header__image {
@@ -28,9 +29,9 @@
 
 .navigation__icon {
   display: flex;
-  flex: 1;
   align-items: center;
   justify-content: center;
+  flex-basis: 4em;
 
   @media (min-width: 480px) {
     display: none;
@@ -40,17 +41,17 @@
 .navigation {
   display: none;
   text-align: center;
-  width: 100%;
   background-color: $primary-color;
   opacity: 0;
+  width: 100%;
 
   @media (min-width: 480px) {
     display: flex;
     justify-content: flex-end;
     position: static;
     opacity: 1;
-    flex: 3;
-    flex-basis: 25%;
+    flex-basis: 15em;
+    width: inherit;
   }
 }
 
@@ -119,7 +120,8 @@
 //Pokemon List Page
 
 .page-info {
-  margin: 1rem 0;
+  display: inline-block;
+  margin: 1rem;
 
   > * {
     margin: 0.3em 0;
@@ -127,26 +129,23 @@
 }
 
 .list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(18em, 1fr));
+  justify-items: stretch;
 }
 
 .list__item {
-  flex: 1 1 100%;
-  margin: 1em 0;
-
-  @media (min-width: 480px) {
-    max-width: 20em;
-    margin-left: 1em;
-    margin-right: 1em;
-  }
+  margin: 1em;
 }
 
 //Pokemon Detail Page
 .card--pokemon-detail {
   max-width: 48rem;
-  margin: auto;
+  margin: 0 1em;
+
+  @media (min-width: 480px) {
+    margin: auto;
+  }
 }
 
 .card__pokemon-list {
@@ -182,7 +181,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 0 1em;
 
   :first-child {
     font-size: 0.8em;
